// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Badge matches snapshot 1`] = `
<DocumentFragment>
  <span
    class="c-eCAFWP c-eCAFWP-fzQAVN-pill-false c-eCAFWP-VfgCA-size-md c-eCAFWP-cmSFZU-color-primary decaBadge-root"
  />
</DocumentFragment>
`;

exports[`components/Badge renders all colors 1`] = `
<DocumentFragment>
  <span
    class="c-eCAFWP c-eCAFWP-fzQAVN-pill-false c-eCAFWP-VfgCA-size-md c-eCAFWP-cmSFZU-color-primary decaBadge-root"
  />
  <span
    class="c-eCAFWP c-eCAFWP-fzQAVN-pill-false c-eCAFWP-VfgCA-size-md c-eCAFWP-eVPjO-color-secondary decaBadge-root"
  />
  <span
    class="c-eCAFWP c-eCAFWP-fzQAVN-pill-false c-eCAFWP-VfgCA-size-md c-eCAFWP-gkSmNj-color-success decaBadge-root"
  />
  <span
    class="c-eCAFWP c-eCAFWP-fzQAVN-pill-false c-eCAFWP-VfgCA-size-md c-eCAFWP-iuTjpG-color-warning decaBadge-root"
  />
  <span
    class="c-eCAFWP c-eCAFWP-fzQAVN-pill-false c-eCAFWP-VfgCA-size-md c-eCAFWP-biZWLQ-color-error decaBadge-root"
  />
</DocumentFragment>
`;

exports[`components/Badge renders all sizes 1`] = `
<DocumentFragment>
  <span
    class="c-eCAFWP c-eCAFWP-fzQAVN-pill-false c-eCAFWP-ioXeqN-size-sm c-eCAFWP-cmSFZU-color-primary decaBadge-root"
  />
  <span
    class="c-eCAFWP c-eCAFWP-fzQAVN-pill-false c-eCAFWP-VfgCA-size-md c-eCAFWP-cmSFZU-color-primary decaBadge-root"
  />
  <span
    class="c-eCAFWP c-eCAFWP-fzQAVN-pill-false c-eCAFWP-YKOjF-size-lg c-eCAFWP-cmSFZU-color-primary decaBadge-root"
  />
</DocumentFragment>
`;

exports[`components/Badge renders pill option 1`] = `
<DocumentFragment>
  <span
    class="c-eCAFWP c-eCAFWP-euJLgm-pill-true c-eCAFWP-VfgCA-size-md c-eCAFWP-cmSFZU-color-primary decaBadge-root"
  />
</DocumentFragment>
`;
